--- a/package.json
+++ b/package.json
@@ -51,11 +51,11 @@
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "latest",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-is": "^18.3.1",
     "react-resizable-panels": "^2.1.7",
@@ -63,7 +63,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "zod": "3.25.76"
   },
